SPRDT-660 updated with latest api spec
